syntax = "proto3";
package xsuportal.proto.services.bench;
option go_package = "github.com/isucon/isucon10-final/proto/services/bench";

import "xsuportal/resources/benchmark_result.proto";

service BenchmarkReportService {
  rpc ReportBenchmarkResult(ReportBenchmarkResultRequest) returns (ReportBenchmarkResultResponse);
  rpc StreamBenchmarkResult(stream ReportBenchmarkResultRequest) returns (stream ReportBenchmarkResultResponse);
}

message ReportBenchmarkResultRequest {
  int64 job_id = 1;
  string handle = 2;
  xsuportal.proto.resources.BenchmarkResult result = 3;
}

message ReportBenchmarkResultResponse {
}
